projects/lungmen.akn/dist/apps/databases/cilium.io.v2.CiliumNetworkPolicy.allow-apps-from-atuin.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: Allow declared application endpoints to
      connect to CNPG cluster 'apps-20260329' for database 'atuin'.
  labels:
    app.kubernetes.io/instance: apps-20260329
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mutualized-cnpg-databases
    helm.sh/chart: mutualized-cnpg-databases-0.1.0
    mutualized.cloudnative-pg.io/cluster: apps-20260329
    mutualized.cloudnative-pg.io/database: atuin
    mutualized.cloudnative-pg.io/group: apps
  name: allow-apps-from-atuin
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: apps-20260329
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: atuin
            io.kubernetes.pod.namespace: atuin
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
